--- a/src/main/resources/assets/endlessendmod/lang/en_us.json
+++ b/src/main/resources/assets/endlessendmod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.endlessendmod.occulence": "Occulence",
   "item.endlessendmod.raw_occulence": "Raw Occulence",
   "item.endlessendmod.sentinel_spawn_egg": "Sentinel Spawn Egg",
+  "entity.endlessendmod.sentinel": "Sentinel",
 
 
   "creativetab.endless_end_tab": "Endless End Tab"
